feat: added first iteration of conclusion

--- a/sources.bib
+++ b/sources.bib
@@ -1,3 +1,17 @@
+% Book about wireframing
+@book{hamm14,
+  author    = {Hamm, Matthew J.},
+  date      = {2014},
+  title     = {Wireframing Essentials},
+  subtitle  = {An introduction to user experience design},
+  edition   = {1},
+  location  = {Birmingham},
+  publisher = {Packt Publishing},
+  pagetotal = {112},
+  isbn      = {978-1-84969-854-2},
+  langid    = {english},
+}
+
 % Wordpress all-in-one for dummies. Edited by Lisa Sabin-Wilson.
 % 2nd ed. Indianapolis, Ind.: John Wiley & Sons, 2013. xx, 820 p.
 % ISBN 9781118383322.
